--- a/src/2-form.html
+++ b/src/2-form.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Goit-js-hw-09</title>
+    <title>My form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav>
-       <a href="1-gallery.html">My gallery</a>
-    <a href="2-form.html">My form</a>
-    </nav>
-   
+   <script src="js/2-form.js"></script>
   </body>
 </html>
