--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav>
-       <a href="1-gallery.html">My gallery</a>
-    <a href="2-form.html">My form</a>
+
+    <nav class="nav-list">
+       <a href="1-gallery.html" class="nav-link">My gallery</a>
+        <a href="2-form.html" class="nav-link">My form</a>
     </nav>
    
   </body>
